--- a/ConsoleApplication1/ConsoleApplication1.vcxproj.filters
+++ b/ConsoleApplication1/ConsoleApplication1.vcxproj.filters
@@ -21,6 +21,12 @@
     <ClInclude Include="bases.h">
       <Filter>头文件</Filter>
     </ClInclude>
+    <ClInclude Include="AlloyMelt.h">
+      <Filter>头文件</Filter>
+    </ClInclude>
+    <ClInclude Include="using.h">
+      <Filter>头文件</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="pch.cpp">
@@ -36,6 +42,9 @@
       <Filter>源文件</Filter>
     </ClCompile>
     <ClCompile Include="IDList.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
+    <ClCompile Include="AlloyMelt.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
   </ItemGroup>
