--- a/Project1/Project1.vcxproj
+++ b/Project1/Project1.vcxproj
@@ -148,6 +148,7 @@
     <ClInclude Include="data.h" />
     <ClInclude Include="pch.h" />
     <ClInclude Include="metel.h" />
+    <ClInclude Include="using.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
